set gap-hack to 0pt in pxpiclogo

--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -947,6 +947,7 @@ and the derived files           pxpic.pdf
     \begingroup
       \pxpicHT\dimexpr#1\relax
       \pxpicWD\pxpicHT
+      \pxpic@kern\z@
       \leavevmode
       \lower3.2\pxpicHT\pxpic
         [mode=px,colours={o=[HTML]{9F393D},g=black!75},skip=.]
