add period after expandable errors

--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -1293,7 +1293,7 @@ and the derived files           pxpic.pdf
       {%
         \expandafter\expandafter\expandafter
         \pxpic@ifend
-          \@firstofone{#1##1}%
+          \@firstofone{#1##1.}%
         \pxpic@end
       }%
   }
