--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -196,6 +196,28 @@ and the derived files           pxpic.pdf
         {MMMM....MMMM.MM....MM..MMMMM..MMMM.MM...MM.MMMM.......MMM}
       }^^A
   }
+\ExplSyntaxOn
+^^A contains code from https://tex.stackexchange.com/a/25753/117050
+\NewDocumentCommand \codeexample { O{\footnotesize} D(){\leavevmode} +v }
+  {
+    \begin{minipage}[c]{.5\linewidth}
+      #1
+      \newlinechar=\endlinechar
+      \exp_args:Nx \scantokens
+        {
+          \string\begin{lstlisting}
+            #3
+          \string\end{lstlisting}
+        }
+    \end{minipage}
+    \begin{minipage}[c]{.45\linewidth}
+      #2
+      \newlinechar=\endlinechar
+      \exp_args:Nx \scantokens {#3}
+    \end{minipage}
+    \par
+  }
+\ExplSyntaxOff
 \begin{document}
   \title
     {^^A
@@ -305,30 +327,18 @@ and the derived files           pxpic.pdf
 %
 % We can draw a small cross rather easily:\par\nobreak
 % \noindent
-% \begin{minipage}[c]{.5\linewidth}\footnotesize
-% \begin{lstlisting}
+% \codeexample$
 % \pxpic
 %   {
 %     {.k}
 %     {kkk}
 %     {.k}
 %   }
-% \end{lstlisting}
-% \end{minipage}
-% \begin{minipage}[c]{.45\linewidth}
-% \leavevmode
-% \pxpic
-%   {
-%     {.k}
-%     {kkk}
-%     {.k}
-%   }
-% \end{minipage}
+% $
 %
 % A small multicoloured grid:\par\nobreak
 % \noindent
-% \begin{minipage}[c]{.5\linewidth}\footnotesize
-% \begin{lstlisting}
+% \codeexample$
 % \pxpic
 %   {
 %     {brgk}
@@ -336,23 +346,11 @@ and the derived files           pxpic.pdf
 %     {gkbr}
 %     {rgkb}
 %   }
-% \end{lstlisting}
-% \end{minipage}
-% \begin{minipage}[c]{.45\linewidth}
-% \leavevmode
-% \pxpic
-%   {
-%     {brgk}
-%     {kbrg}
-%     {gkbr}
-%     {rgkb}
-%   }
-% \end{minipage}
+% $
 %
 % A heart (shamelessly copied example from \pixelart):\par\nobreak
 % \noindent
-% \begin{minipage}[c]{.5\linewidth}\footnotesize
-% \begin{lstlisting}
+% \codeexample$
 % \pxpic
 %   {
 %     {..rr.rr}
@@ -365,40 +363,17 @@ and the derived files           pxpic.pdf
 %     {...rrr}
 %     {....r}
 %   }
-% \end{lstlisting}
-% \end{minipage}
-% \begin{minipage}[c]{.45\linewidth}
-% \leavevmode
-% \pxpic
-%   {
-%     {..rr.rr}
-%     {.rrrrrrr}
-%     {rrrrrrrrr}
-%     {rrrrrrrrr}
-%     {rrrrrrrrr}
-%     {.rrrrrrr}
-%     {..rrrrr}
-%     {...rrr}
-%     {....r}
-%   }
-% \end{minipage}
+% $
 %
 % Using |mode=rgb| to draw a short coloured line:\par\nobreak
 % \noindent
-% \begin{minipage}[c]{.5\linewidth}\footnotesize
-% \begin{lstlisting}
+% \codeexample$
 % \pxpic[mode=rgb]{{{1,0,1}{1,1,0}{0,1,1}}}
-% \end{lstlisting}
-% \end{minipage}
-% \begin{minipage}[c]{.45\linewidth}
-% \leavevmode
-% \pxpic[mode=rgb]{{{1,0,1}{1,1,0}{0,1,1}}}
-% \end{minipage}
+% $
 %
 % A multicoloured grid using skips and |mode=cmy|:\par\nobreak
 % \noindent
-% \begin{minipage}[c]{.5\linewidth}\footnotesize
-% \begin{lstlisting}
+% \codeexample$
 % \pxpic[mode=cmy]
 %   {
 %     {{1,0,1} {1,1,0} {0,1,1} {}     }
@@ -406,33 +381,15 @@ and the derived files           pxpic.pdf
 %     {{0,1,1} {}      {1,0,1} {1,1,0}}
 %     {{1,1,0} {0,1,1} {}      {1,0,1}}
 %   }
-% \end{lstlisting}
-% \end{minipage}
-% \begin{minipage}[c]{.45\linewidth}
-% \leavevmode
-% \pxpic[mode=cmy]
-%   {
-%     {{1,0,1} {1,1,0} {0,1,1} {}     }
-%     {{}      {1,0,1} {1,1,0} {0,1,1}}
-%     {{0,1,1} {}      {1,0,1} {1,1,0}}
-%     {{1,1,0} {0,1,1} {}      {1,0,1}}
-%   }
-% \end{minipage}
+% $
 %
 % Showing the difference between a skipped and a white pixel:\par\nobreak
 % \noindent
-% \begin{minipage}[c]{.5\linewidth}\footnotesize
-% \begin{lstlisting}
+% \codeexample()$
 % \pxpicsetup{colours = {w=white}}
 % \colorbox{gray}{\pxpic{{bbb}{b.b}{bbb}}}
 % \colorbox{gray}{\pxpic{{bbb}{bwb}{bbb}}}
-% \end{lstlisting}
-% \end{minipage}
-% \begin{minipage}[c]{.45\linewidth}
-% \pxpicsetup{colours = {w=white}}
-% \colorbox{gray}{\pxpic{{bbb}{b.b}{bbb}}}
-% \colorbox{gray}{\pxpic{{bbb}{bwb}{bbb}}}
-% \end{minipage}
+% $
 %
 % \enlargethispage{1.1\baselineskip}
 % A biggish example: Tux.\footnote{Source:
@@ -440,8 +397,7 @@ and the derived files           pxpic.pdf
 % put two rows of pixels per code line to reduce the size a bit and the code is
 % displayed tinily.\par\nobreak
 % \noindent
-% \begin{minipage}[c]{.5\linewidth}\tiny
-% \begin{lstlisting}
+% \codeexample[\tiny]$
 % \pxpic
 %   [
 %      size    = 2.5pt
@@ -468,43 +424,12 @@ and the derived files           pxpic.pdf
 %     {.O:::::::kkkkkkkk:::::::O}  {..OO:::::kkkkkkkk:::::OO}
 %     {....OO::O.kkkkkk.O::OO}     {......OOO........OOO}
 %   }
-% \end{lstlisting}
-% \end{minipage}
-% \begin{minipage}[c]{.45\linewidth}
-% \leavevmode
-% \pxpic
-%   [
-%      size    = 2.5pt
-%     ,colours = {:=orange,
-%                 '=black!10,
-%                 g=black!75,
-%                 O=orange!80!black}
-%   ]
-%   {
-%     {...........gggg}            {.........gggkkggg}
-%     {........ggkkkkkkkg}         {........gkkkkkkkkg}
-%     {........kkkkkkkkkk}         {.......gkk.kkkk.kkk}
-%     {.......gk.k.kk.k.kk}        {.......gk.k.kk.k.kk}
-%     {.......gkkkkkkkkkkk}        {.......gkkk::::kkkk}
-%     {.......gk::::::::kk}        {.......gk.:kkkk:kkk}
-%     {......gkk..::::'kkkk}       {......gkk....'''kkkk}
-%     {......gkk....''''kkk}       {.....gkk.....''''kkkk}
-%     {.....gk.......''''kkk}      {....gkk........'''kkkk}
-%     {....gkk........'''kkkk}     {....gk..........''kkkk}
-%     {...gkkg.........'''kkkk}    {...gkkkk........'''kkkk}
-%     {..OOOOkkk.......'''kOOOO}   {..O::::kkk......'''O:::O}
-%     {.O::::::kk.....'''::::::O}  {.O::::::kkk...''kk::::::O}
-%     {O:::::::kkk...'kkk:::::::O} {O:::::::kkk...'kkk:::::::O}
-%     {.O:::::::kkkkkkkk:::::::O}  {..OO:::::kkkkkkkk:::::OO}
-%     {....OO::O.kkkkkk.O::OO}     {......OOO........OOO}
-%   }
-% \end{minipage}
+% $
 %
 % Just for Paulo, a duck. Also, showing that the colour definitions in |mode=px|
 % can be arbitrary tokens or multiple letters:\par\nobreak
 % \noindent
-% \begin{minipage}[c]{.5\linewidth}\tiny
-% \begin{lstlisting}
+% \codeexample[\tiny]$
 % \pxpic[colours = {oo=orange,
 %                   \ylw=yellow,
 %                   \blk=black},
@@ -523,29 +448,7 @@ and the derived files           pxpic.pdf
 %     {\skp\skp\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw}
 %     {\skp\skp\skp\skp\ylw\ylw\ylw\ylw\ylw}
 %   }
-% \end{lstlisting}
-% \end{minipage}
-% \begin{minipage}[c]{.45\linewidth}
-% \leavevmode
-% \pxpic[colours = {oo=orange,
-%                   \ylw=yellow,
-%                   \blk=black},
-%        skip    = \skp]
-%   {
-%     {\skp\skp\skp\ylw\ylw\ylw\ylw}
-%     {\skp\skp\ylw\ylw\ylw\ylw\ylw\ylw}
-%     {\skp\skp{oo}\ylw\blk\ylw\ylw\ylw}
-%     {{oo}{oo}{oo}\ylw\ylw\ylw\ylw\ylw}
-%     {\skp{oo}{oo}{oo}\ylw\ylw\ylw\skp\skp\skp\skp\skp\ylw}
-%     {\skp\skp\skp\ylw\ylw\ylw\ylw\ylw\ylw\ylw\skp\ylw\ylw}
-%     {\skp\skp\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw}
-%     {\skp\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw\skp\ylw\ylw}
-%     {\skp\ylw\ylw\skp\ylw\ylw\ylw\ylw\skp\ylw\ylw\ylw}
-%     {\skp\ylw\ylw\ylw\skp\skp\skp\skp\ylw\ylw\ylw}
-%     {\skp\skp\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw}
-%     {\skp\skp\skp\skp\ylw\ylw\ylw\ylw\ylw}
-%   }
-% \end{minipage}
+% $
 %
 % Another example might be the definition of \CS{pxpiclogo} in
 % \autoref{sec:implementation:pxpiclogo}.
