use p@ instead of 1pt

--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -745,7 +745,7 @@ and the derived files           pxpic.pdf
 %    \begin{macrocode}
 \@ifdefinable\pxpicHT{\newdimen\pxpicHT}
 \@ifdefinable\pxpicWD{\newdimen\pxpicWD}
-\pxpicHT=1pt
+\pxpicHT=\p@
 \pxpicWD=\pxpicHT
 %    \end{macrocode}
 % \end{variable}
