use kern instead of hskip in pxskip

--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -1111,7 +1111,7 @@ and the derived files           pxpic.pdf
 %   frontend macros \CS{px} and \CS{pxskip} will be let inside of \CS{pxpic}.
 %    \begin{macrocode}
 \newcommand\pxpic@px{\vrule height\pxpicHT width\pxpicWD depth\z@}
-\newcommand\pxpic@skip{\hskip\pxpicWD}
+\newcommand\pxpic@skip{\kern\pxpicWD}
 %    \end{macrocode}
 % \end{macro}
 %
