do not index p@

--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -150,7 +150,7 @@ and the derived files           pxpic.pdf
 \DoNotIndex{\relax,\RequirePackage}
 \DoNotIndex{\@declaredcolor,\@firstofone,\@gobble,\@ifdefinable,\@ifnextchar}
 \DoNotIndex{\@ifundefined,\@undeclaredcolor}
-\DoNotIndex{\ekv@ifempty,\ekv@name,\z@}
+\DoNotIndex{\ekv@ifempty,\ekv@name,\p@,\z@}
 \DoNotIndex{\unexpanded}
 \DoNotIndex{\vbox,\vrule}
 \@ifdefinable\gobbledocstriptag{\def\gobbledocstriptag#1>{}}
