fix typo in documentation

--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -513,9 +513,9 @@ and the derived files           pxpic.pdf
 %     value is |px|.
 %   \item[size=\meta{dimen}]
 %     Set both |ht| and |wd|. Initial value is \the\pxpicHT.
-%   \item[skip=\meta{dimen}]
-%     Define the value to be a skip (an empty space of width |wd|) in |mode=px|.
-%     No skip definitions are made by the package.
+%   \item[skip=\meta{value}]
+%     Define the \meta{value} to be a skip (an empty space of width |wd|) in
+%     |mode=px|. No skip definitions are made by the package.
 %   \item[wd=\meta{dimen}]
 %     Set the width of the pixels.
 % \end{options}
