--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-% File: pxpic.dtx Copyright (C) 2021 Jonathan P. Spratte
+% File: pxpic.dtx Copyright (C) 2021-2022 Jonathan P. Spratte
 %
 % This work  may be  distributed and/or  modified under  the conditions  of the
 % LaTeX Project Public License (LPPL),  either version 1.3c  of this license or
@@ -27,7 +27,7 @@ Released under the LaTeX Project Public License v1.3c or later
 See http://www.latex-project.org/lppl.txt
 --------------------------------------------------------------
 
-Copyright (C) 2021 Jonathan P. Spratte
+Copyright (C) 2021-2022 Jonathan P. Spratte
 
 This  work may be  distributed and/or  modified under  the conditions  of the
 LaTeX Project Public License (LPPL),  either version 1.3c  of this license or
